# Mesh-coloring

./: CMakeLists.txt  HalfedgeDS.cpp  Mesh Coloring.vcxproj  Operators.cpp  Source.cpp
Debug/Mesh Coloring.tlog/: Mesh Coloring.lastbuildstate
cmake/: FindLIBIGL.cmake
data/: box.off
